Long press shouldn't get suppressed after tap down suppression.

Bug: 838971
Change-Id: Ic296d7e5792ed38cc636b1f84d7d3d2e1ac229cb
Reviewed-on: https://chromium-review.googlesource.com/1037424
Commit-Queue: Sahel Sharifymoghaddam <sahel@chromium.org>
Reviewed-by: Dave Tapuska <dtapuska@chromium.org>
Cr-Commit-Position: refs/heads/master@{#555536}