content/browser/renderer_host/input/fling_controller.cc
@@ -78,7 +78,6 @@ bool FlingController::ShouldForwardForTapSuppression(
     case WebInputEvent::kGestureTapCancel:
     case WebInputEvent::kGestureTap:
     case WebInputEvent::kGestureDoubleTap:
-    case WebInputEvent::kGestureLongPress:
     case WebInputEvent::kGestureLongTap:
     case WebInputEvent::kGestureTwoFingerTap:
       if (gesture_event.event.SourceDevice() ==
