content/browser/renderer_host/input/touchscreen_tap_suppression_controller.cc
@@ -26,7 +26,6 @@ bool TouchscreenTapSuppressionController::FilterTapEvent(
       return ShouldSuppressTapDown();
 
     case WebInputEvent::kGestureShowPress:
-    case WebInputEvent::kGestureLongPress:
     case WebInputEvent::kGestureTapUnconfirmed:
     case WebInputEvent::kGestureTapCancel:
     case WebInputEvent::kGestureTap:
